src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__unknown_reference_should_be_reported_with_line_number.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error: Could not resolve reference to y
  ┌─ <internal>:6:18
  │
6 │             x := y;
  │                  ^ Could not resolve reference to y


